fix mobile menu alignment

--- a/src/theme/Navbar/Content/styles.module.css
+++ b/src/theme/Navbar/Content/styles.module.css
@@ -8,7 +8,7 @@
   display: grid;
   grid-template-columns: 1fr auto;
   align-items: center;
-  padding: 0.5rem 1.5rem;
+  padding: 0.5rem 2rem;
   gap: 2rem;
   border-bottom: 1px solid var(--click-color-stroke);
   border-top: 1px solid var(--click-color-stroke);
